# medallion

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  deploy.py  pyproject.toml
.github/workflows/: release.yml
example/: __init__.py  config.yml  extract.py  run.py  transform.py
example/basic/: extract.py  run.py  transform.py
example/streaming/: extract.py  run.py  transform.py
medallion/: __init__.py  base.py  horde.py  log.py  medallion.py  pipeline.py  resolve_classes.py  stream.py
medallion/consumer/: mock.py
medallion/fleet/: configure_runtime.py  pipeline_graph_model.py
medallion/store/: base.py  gcs.py  local.py  store.py
test/: test_horde.py  test_resolve_classes.py
