[project]
name = "medallion-pipeline"
version = "0.1.2"
description = "A composable scraper pipeline built around the medallion architecture (bronze / silver / gold)."
authors = [
    {name = "mcklmo", email = "m.h98@gx.net"}
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
keywords = ["pipeline", "etl", "scraper", "medallion-architecture", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "google-auth (>=2.52.0,<3.0.0)",
    "pendulum (>=3.2.0,<4.0.0)",
    "google-cloud-storage (>=3.10.1,<4.0.0)"
]

[project.urls]
Homepage = "https://github.com/Mcklmo/medallion"
Repository = "https://github.com/Mcklmo/medallion"
Issues = "https://github.com/Mcklmo/medallion/issues"

[project.scripts]
medallion = "medallion.medallion:main"

[tool.poetry]
packages = [{include = "medallion"}]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
